syntax = "proto3";
package mail;

service Mail {
  //PutEmail - put an email request an email
  rpc PutEmail (EmailRequest) returns (EmailResponse) {}

  //GetEmail - get email from server
  rpc GetEmail(Worker) returns (EmailRequest) {}
}

//EmailRequest - email request definition
message EmailRequest {
   string sender = 1;
   string receiver = 2;
   string title = 3;
   string content = 4;
}

//EmailResponse - email response definition
message EmailResponse {
  bool status = 1;
}

//Worker - worker who gets the email request
message Worker{
 string workerName = 1;
}
